--- a/film.html
+++ b/film.html
@@ -10,6 +10,20 @@
 
 
   <style>
+  .report-btn{
+      background:transparent; border:1px solid rgba(255,140,0,.6);
+      color:#ffa500; font-size:14px; font-weight:700;
+      padding:6px 10px; border-radius:8px; cursor:pointer; transition:.2s; margin-left:8px;
+    }
+    .report-btn:hover{ box-shadow:0 0 12px rgba(255,140,0,.35); transform:scale(1.03); }
+    .modal-backdrop{ position:fixed; inset:0; background:rgba(0,0,0,.55); display:none; align-items:center; justify-content:center; z-index:9999; }
+    .modal{ width:min(520px,92vw); background:#121317; border:1px solid #2a2d33; border-radius:14px; padding:14px; }
+    .modal h3{margin:0 0 8px; color:#ffa500}
+    .modal textarea{ width:100%; min-height:120px; resize:vertical; border-radius:10px; border:1px solid #333; background:#0f1014; color:#eee; padding:10px; }
+    .modal .row{ display:flex; gap:8px; margin-top:10px; justify-content:flex-end; }
+    .btn-ghost{ background:transparent; border:1px solid #444; color:#ddd; padding:8px 12px; border-radius:8px; cursor:pointer }
+    .btn-send{ background:#ffa500; color:#111; font-weight:700; border:none; padding:8px 14px; border-radius:8px; cursor:pointer }
+
     .film-container { display: flex; flex-wrap: wrap; gap: 40px; margin-top: 40px; align-items: flex-start; }
     .film-left {
       flex: 1;
@@ -499,6 +513,7 @@
     <button id="btnTrailer">🎞️ Трейлер</button>
   </div>
   <button id="bookmarkBtn" class="bookmark-btn">⭐ Додати в закладки</button>
+  <button id="reportIssueBtn" class="report-btn">⚠ Повідомити про проблему</button>
 </div>
 
 
@@ -1025,7 +1040,61 @@ sendBtn.addEventListener("click", async () => {
 
 // Запускаємо завантаження при відкритті сторінки
 loadComments();
+<script>
+(function(){
+  const modal   = document.getElementById("reportModal");
+  const txt     = document.getElementById("reportText");
+  const btnOpen = document.getElementById("reportIssueBtn");
+  const btnSend = document.getElementById("reportSend");
+  const btnCancel = document.getElementById("reportCancel");
+
+  if (!btnOpen || !modal) return;
+
+  btnOpen.addEventListener("click", ()=>{ modal.style.display="flex"; txt.focus(); });
+  btnCancel.addEventListener("click", ()=>{ modal.style.display="none"; txt.value=""; });
+  modal.addEventListener("click", (e)=>{ if (e.target===modal) modal.style.display="none"; });
+
+  async function sendReport(item_type, titleElId){
+    const message = (txt.value || "").trim();
+    if (message.length < 5) return alert("Опишіть проблему детальніше (мінімум 5 символів).");
+
+    const title = (document.getElementById(titleElId)?.textContent || "").trim();
+    let user = null;
+    try { user = JSON.parse(localStorage.getItem("telegram_user") || "null"); } catch {}
+
+    const payload = {
+      user_id: user?.id ? String(user.id) : null,
+      user_name: [user?.first_name, user?.last_name].filter(Boolean).join(" ") || user?.username || null,
+      item_type,
+      item_title: title,
+      page_url: location.href,
+      content: message,
+      status: "new"
+    };
+
+    const { error } = await supabase.from("feedback_reports").insert(payload);
+    if (error) { console.error(error); alert("Помилка під час відправки. Спробуйте ще раз."); return; }
+
+    modal.style.display="none"; txt.value="";
+    alert("✅ Дякуємо! Повідомлення відправлено. Відповідь зʼявиться у розділі «Повідомлення» вашого кабінету.");
+  }
+
+  btnSend.onclick = ()=>sendReport("Фільм", "filmTitle");
+ 
+})();
 </script>
 
+</script>
+<div id="reportModal" class="modal-backdrop">
+  <div class="modal">
+    <h3>⚠ Повідомити про проблему</h3>
+    <p style="color:#9aa0a6; margin:6px 0 10px">Опишіть, що саме не працює (посилання, серія, плеєр тощо).</p>
+    <textarea id="reportText" placeholder="Коротко опишіть проблему..."></textarea>
+    <div class="row">
+      <button id="reportCancel" class="btn-ghost">Скасувати</button>
+      <button id="reportSend" class="btn-send">Надіслати</button>
+    </div>
+  </div>
+</div>
 </body>
 </html>
