--- a/film.html
+++ b/film.html
@@ -940,34 +940,50 @@ async function loadRecommendedFilms(title, genre) {
   </div>
 </div>
 <script>
-const modal = document.getElementById("reportModal");
-const reportBtn = document.getElementById("reportBtn");
-const closeBtn = document.querySelector(".close-modal");
-const cancelBtn = document.getElementById("cancelReport");
-const sendBtn = document.getElementById("sendReport");
-const textArea = document.getElementById("reportText");
+// === ⚠ Повідомити про проблему ===
+(function(){
+  const modal   = document.getElementById("reportModal");
+  const txt     = document.getElementById("reportText");
+  const btnOpen = document.getElementById("reportIssueBtn");
+  const btnSend = document.getElementById("reportSend");
+  const btnCancel = document.getElementById("reportCancel");
 
-// Відкрити
-reportBtn.onclick = () => {
-  modal.style.display = "block";
-  textArea.value = "";
-};
+  if (!btnOpen || !modal) return;
 
-// Закрити
-closeBtn.onclick = () => modal.style.display = "none";
-cancelBtn.onclick = () => modal.style.display = "none";
+  btnOpen.addEventListener("click", ()=>{ modal.style.display="flex"; txt.focus(); });
+  btnCancel.addEventListener("click", ()=>{ modal.style.display="none"; txt.value=""; });
+  modal.addEventListener("click", (e)=>{ if (e.target===modal) modal.style.display="none"; });
 
-// Надіслати (поки просто закриває, можна пізніше підключити Telegram API або email)
-sendBtn.onclick = () => {
-  alert("Повідомлення надіслано адміну!");
-  modal.style.display = "none";
-};
+  async function sendReport(item_type, titleElId){
+    const message = (txt.value || "").trim();
+    if (message.length < 5) return alert("Опишіть проблему детальніше (мінімум 5 символів).");
 
-// Закриття по кліку поза вікном
-window.onclick = (e) => {
-  if (e.target == modal) modal.style.display = "none";
-};
+    const title = (document.getElementById(titleElId)?.textContent || "").trim();
+    let user = null;
+    try { user = JSON.parse(localStorage.getItem("telegram_user") || "null"); } catch {}
+
+    const payload = {
+      user_id: user?.id ? String(user.id) : null,
+      user_name: [user?.first_name, user?.last_name].filter(Boolean).join(" ") || user?.username || null,
+      item_type,
+      item_title: title,
+      page_url: location.href,
+      content: message,
+      status: "new"
+    };
+
+    const { error } = await supabase.from("feedback_reports").insert(payload);
+    if (error) { console.error(error); alert("Помилка під час відправки. Спробуйте ще раз."); return; }
+
+    modal.style.display="none"; txt.value="";
+    alert("✅ Дякуємо! Повідомлення відправлено. Відповідь зʼявиться у розділі «Повідомлення» вашого кабінету.");
+  }
+
+  // 🔹 для фільмів
+  btnSend.onclick = ()=>sendReport("Фільм", "filmTitle");
+})();
 </script>
+
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
