--- a/multseries.html
+++ b/multseries.html
@@ -7,6 +7,19 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
+    .modal-backdrop {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.55);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    .modal-backdrop.active {
+      display: flex;
+    }
+
     .report-btn{
       background:transparent; 
       border:1px solid rgba(255,140,0,.6);
@@ -397,9 +410,19 @@ document.addEventListener("DOMContentLoaded", async () => {
 
   if (!btnOpen || !modal) return;
 
-  btnOpen.addEventListener("click", ()=>{ modal.style.display="flex"; txt.focus(); });
-  btnCancel.addEventListener("click", ()=>{ modal.style.display="none"; txt.value=""; });
-  modal.addEventListener("click", (e)=>{ if (e.target===modal) modal.style.display="none"; });
+  btnOpen.addEventListener("click", ()=>{
+    modal.classList.add("active");
+    txt.focus();
+  });
+
+  btnCancel.addEventListener("click", ()=>{
+    modal.classList.remove("active");
+    txt.value="";
+  });
+
+  modal.addEventListener("click", (e)=>{
+    if (e.target===modal) modal.classList.remove("active");
+  });
 
   async function sendReport(item_type, titleElId){
     const message = (txt.value || "").trim();
@@ -422,7 +445,8 @@ document.addEventListener("DOMContentLoaded", async () => {
     const { error } = await supabase.from("feedback_reports").insert(payload);
     if (error) { console.error(error); alert("Помилка під час відправки. Спробуйте ще раз."); return; }
 
-    modal.style.display="none"; txt.value="";
+    modal.classList.remove("active");
+    txt.value="";
     alert("✅ Дякуємо! Повідомлення відправлено. Відповідь зʼявиться у розділі «Повідомлення» вашого кабінету.");
   }
 
