--- a/film.html
+++ b/film.html
@@ -984,133 +984,90 @@ async function loadRecommendedFilms(title, genre) {
 })();
 </script>
 
-<script type="module">
-import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+<!-- 🧾 Модальне вікно -->
+<div id="reportModal" class="modal">
+  <div class="modal-content">
+    <span class="close-modal">&times;</span>
+    <h3>⚠ Повідомити про проблему</h3>
+    <p>Опишіть коротко, що не працює (посилання, плеєр тощо):</p>
+    <textarea id="reportText" rows="4" placeholder="Коротко опишіть проблему..."></textarea>
+    <div class="modal-buttons">
+      <button id="reportCancel" class="cancel">Скасувати</button>
+      <button id="reportSend" class="send">Надіслати</button>
+    </div>
+  </div>
+</div>
 
-const supabaseUrl = 'https://zerlqvbmqszomlondlte.supabase.co';   // 🔹 заміни на свою адресу
-const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";                      // 🔹 встав свій anon ключ
-const supabase = createClient(supabaseUrl, supabaseKey);
-
-// Отримуємо ID фільму з URL (наприклад ?id=5)
-const filmId = new URLSearchParams(window.location.search).get("id");
-
-// HTML елементи
-const commentsList = document.getElementById("commentsList");
-const sendBtn = document.getElementById("sendComment");
-
-// ===== 📥 ЗАВАНТАЖИТИ КОМЕНТАРІ =====
-async function loadComments() {
-  commentsList.innerHTML = "<p style='color:#777'>Завантаження...</p>";
-
-  const { data, error } = await supabase
-    .from('comments')
-    .select('*')
-    .eq('film_id', filmId)
-    .order('created_at', { ascending: false });
-
-  if (error) {
-    console.error("Помилка завантаження:", error);
-    commentsList.innerHTML = "<p style='color:#c66'>Не вдалося завантажити коментарі 😕</p>";
-    return;
-  }
-
-  if (!data || data.length === 0) {
-    commentsList.innerHTML = "<p style='color:#888'>Ще немає коментарів. Будь першим!</p>";
-    return;
-  }
-
-  // очищуємо і додаємо
-  commentsList.innerHTML = "";
-  for (const c of data) {
-    const div = document.createElement("div");
-    div.className = "comment";
-    div.innerHTML = `
-      <strong>${c.username || "Анонім"}</strong>
-      <p>${c.text}</p>
-      <small>${new Date(c.created_at).toLocaleString()}</small>
-    `;
-    commentsList.appendChild(div);
-  }
-}
-
-// ===== 📤 НАДІСЛАТИ КОМЕНТАР =====
-sendBtn.addEventListener("click", async () => {
-  const username = document.getElementById("username").value.trim() || "Анонім";
-  const text = document.getElementById("commentText").value.trim();
-
-  if (!text) return alert("Введи коментар 🙂");
-
-  // вставляємо в базу
-  const { error } = await supabase
-    .from('comments')
-    .insert([{ film_id: filmId, username, text }]);
-
-  if (error) {
-    console.error("Помилка надсилання:", error);
-    alert("Не вдалося надіслати 😕");
-  } else {
-    document.getElementById("commentText").value = "";
-    loadComments(); // оновити список
-  }
-});
-
-// Запускаємо завантаження при відкритті сторінки
-loadComments();
 <script>
 (function(){
-  const modal   = document.getElementById("reportModal");
-  const txt     = document.getElementById("reportText");
+  const modal = document.getElementById("reportModal");
+  const txt = document.getElementById("reportText");
   const btnOpen = document.getElementById("reportIssueBtn");
   const btnSend = document.getElementById("reportSend");
   const btnCancel = document.getElementById("reportCancel");
+  const btnClose = document.querySelector(".close-modal");
 
   if (!btnOpen || !modal) return;
 
-  btnOpen.addEventListener("click", ()=>{ modal.style.display="flex"; txt.focus(); });
-  btnCancel.addEventListener("click", ()=>{ modal.style.display="none"; txt.value=""; });
-  modal.addEventListener("click", (e)=>{ if (e.target===modal) modal.style.display="none"; });
+  // Відкрити
+  btnOpen.addEventListener("click", () => {
+    modal.style.display = "block";
+    txt.focus();
+  });
 
-  async function sendReport(item_type, titleElId){
+  // Закрити кнопками
+  [btnCancel, btnClose].forEach(btn =>
+    btn?.addEventListener("click", () => {
+      modal.style.display = "none";
+      txt.value = "";
+    })
+  );
+
+  // Закрити кліком поза вікном
+  modal.addEventListener("click", (e) => {
+    if (e.target === modal) modal.style.display = "none";
+  });
+
+  // Надіслати
+  async function sendReport(item_type, titleElId) {
     const message = (txt.value || "").trim();
     if (message.length < 5) return alert("Опишіть проблему детальніше (мінімум 5 символів).");
 
     const title = (document.getElementById(titleElId)?.textContent || "").trim();
     let user = null;
-    try { user = JSON.parse(localStorage.getItem("telegram_user") || "null"); } catch {}
+    try {
+      user = JSON.parse(localStorage.getItem("telegram_user") || "null");
+    } catch {}
 
     const payload = {
       user_id: user?.id ? String(user.id) : null,
-      user_name: [user?.first_name, user?.last_name].filter(Boolean).join(" ") || user?.username || null,
+      user_name:
+        [user?.first_name, user?.last_name].filter(Boolean).join(" ") ||
+        user?.username ||
+        null,
       item_type,
       item_title: title,
       page_url: location.href,
       content: message,
-      status: "new"
+      status: "new",
     };
 
     const { error } = await supabase.from("feedback_reports").insert(payload);
-    if (error) { console.error(error); alert("Помилка під час відправки. Спробуйте ще раз."); return; }
+    if (error) {
+      console.error(error);
+      alert("Помилка під час відправки. Спробуйте ще раз.");
+      return;
+    }
 
-    modal.style.display="none"; txt.value="";
-    alert("✅ Дякуємо! Повідомлення відправлено. Відповідь зʼявиться у розділі «Повідомлення» вашого кабінету.");
+    modal.style.display = "none";
+    txt.value = "";
+    alert("✅ Дякуємо! Повідомлення відправлено.");
   }
 
-  btnSend.onclick = ()=>sendReport("Фільм", "filmTitle");
- 
+  btnSend.onclick = () => sendReport("Фільм", "filmTitle");
 })();
 </script>
 
-</script>
-<div id="reportModal" class="modal-backdrop">
-  <div class="modal">
-    <h3>⚠ Повідомити про проблему</h3>
-    <p style="color:#9aa0a6; margin:6px 0 10px">Опишіть, що саме не працює (посилання, серія, плеєр тощо).</p>
-    <textarea id="reportText" placeholder="Коротко опишіть проблему..."></textarea>
-    <div class="row">
-      <button id="reportCancel" class="btn-ghost">Скасувати</button>
-      <button id="reportSend" class="btn-send">Надіслати</button>
-    </div>
-  </div>
 </div>
 </body>
 </html>
