--- a/profile.html
+++ b/profile.html
@@ -18,142 +18,168 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
 <style>
-  .profile-wrap{max-width:860px;margin:24px auto;padding:16px}
-  .card{background:#0e0f13;border:1px solid #222;border-radius:16px;padding:20px;margin-bottom:16px}
-  .muted{color:#9aa0a6;font-size:13px}
-  .btn{padding:10px 14px;border-radius:10px;border:none;cursor:pointer}
-  .btn-primary{background:#00ffd5;color:#000;font-weight:600}
-  .btn-ghost{background:transparent;border:1px solid #444;color:#ddd}
-  .input{width:100%;padding:10px 12px;border:1px solid #333;border-radius:10px;background:#111;color:#eee}
-.profile-actions {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-top: 16px;
+body {
+  background: #f6f6f8;
+  font-family: "Poppins", sans-serif;
+  color: #222;
+  margin: 0;
+  padding: 0;
 }
 
-.profile-actions .btn {
-  width: 100%;
+.profile-wrap {
+  max-width: 1000px;
+  margin: 40px auto;
+  padding: 0 16px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 20px;
+}
+
+/* === Картки === */
+.card {
+  background: #fff;
+  border-radius: 14px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+  padding: 18px 20px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+.card:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 18px rgba(0,0,0,0.12);
+}
+
+h1 {
+  grid-column: 1 / -1;
+  text-align: center;
+  color: #4a00e0;
+  background: linear-gradient(45deg, #4a00e0, #00fff2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 28px;
+  margin-bottom: 6px;
+}
+
+h3 {
+  color: #333;
+  margin-top: 0;
+}
+
+/* Кнопки */
+.btn {
+  padding: 10px 14px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
   font-weight: 600;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
-
-.profile-actions .btn:hover {
-  transform: scale(1.03);
-  box-shadow: 0 0 12px rgba(0, 255, 255, 0.4);
+.btn-primary {
+  background: linear-gradient(45deg, #00fff2, #4a00e0);
+  color: #fff;
 }
-/* === ⭐ Сітка закладок у "Мій кабінет" === */
-.bookmark-grid {
+.btn-ghost {
+  background: transparent;
+  border: 1px solid #ccc;
+  color: #333;
+}
+.btn:hover {
+  transform: scale(1.03);
+  box-shadow: 0 0 10px rgba(0,255,255,0.2);
+}
+
+/* === Профіль користувача === */
+#user-card {
+  text-align: center;
+}
+#user-card h3 {
+  font-size: 20px;
+  color: #222;
+}
+#user-card .muted {
+  font-size: 14px;
+  color: #666;
+}
+.profile-actions {
+  margin-top: 12px;
   display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  justify-content: center;
-  margin-top: 14px;
+  flex-direction: column;
+  gap: 8px;
+}
+
+/* === Закладки === */
+.bookmark-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  gap: 14px;
+  margin-top: 10px;
 }
 .bookmark-card {
-  background: #0d0f14;
-  border: 1px solid rgba(0,255,255,0.18);
+  background: #fafafa;
   border-radius: 10px;
-  width: 150px;
-  cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  border: 1px solid #ddd;
   overflow: hidden;
+  cursor: pointer;
+  transition: 0.2s;
 }
 .bookmark-card:hover {
   transform: scale(1.05);
-  box-shadow: 0 0 14px rgba(0,255,255,0.28);
+  box-shadow: 0 0 12px rgba(0,255,255,0.25);
 }
 .bookmark-card img {
   width: 100%;
-  height: 210px;
+  height: 200px;
   object-fit: cover;
 }
 .bookmark-card p {
-  color: #fff;
+  margin: 8px;
   text-align: center;
-  font-size: 13.5px;
-  margin: 6px 8px 10px;
+  font-size: 14px;
+  font-weight: 500;
 }
 
-/* верхній рядок секції — заголовок + кнопка */
-.fav-head {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 12px;
-  margin-top: 6px;
-}
-.fav-clear {
-  background: transparent;
-  border: 1px solid rgba(255, 77, 77, 0.4);
-  color: #ff6b6b;
-  border-radius: 8px;
-  padding: 6px 10px;
-  font-weight: 600;
-  cursor: pointer;
-}
-.fav-clear:hover { box-shadow: 0 0 12px rgba(255, 77, 77, 0.35); }
-/* === 📩 Оновлені повідомлення в кабінеті === */
-#messages-card {
-  position: relative;
-}
-
+/* === Повідомлення === */
 .message-item {
-  background: #0f1117;
-  border: 1px solid rgba(255,255,255,0.08);
+  background: #fafafa;
+  border: 1px solid #ddd;
   border-radius: 10px;
   padding: 10px 12px;
-  margin-bottom: 10px;
-  position: relative;
+  margin-bottom: 8px;
 }
-
-.message-item.new::before {
-  content: "• Нове";
-  position: absolute;
-  top: 6px;
-  right: 10px;
-  color: #00fff2;
-  font-size: 12px;
-  font-weight: 600;
-}
-
 .message-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .message-body {
   margin-top: 6px;
-  color: #ddd;
+  color: #333;
   font-size: 14px;
-  white-space: pre-wrap;
 }
-
 .msg-delete {
   background: transparent;
   border: 1px solid rgba(255,77,77,0.4);
-  color: #ff6b6b;
+  color: #c00;
   border-radius: 6px;
-  padding: 3px 8px;
+  padding: 4px 8px;
   font-size: 12px;
   cursor: pointer;
-  transition: 0.2s;
 }
-
 .msg-delete:hover {
-  background: rgba(255,77,77,0.15);
+  background: rgba(255,77,77,0.1);
 }
 
-@keyframes pulse {
-  0% { opacity: 1; }
-  50% { opacity: 0.4; }
-  100% { opacity: 1; }
+/* === Загальний вигляд === */
+footer {
+  grid-column: 1 / -1;
+  text-align: center;
+  color: #777;
+  margin: 24px 0;
+  font-size: 14px;
 }
-
 </style>
+
 </head>
-<body>
+<body style="background:#f6f6f8;">
 
 <!-- Хедер -->
 <div id="header-placeholder"></div>
