--- a/profile.html
+++ b/profile.html
@@ -19,54 +19,55 @@
 
 <style>
 body {
-  background: #f6f6f8;
+  background: #0b0c10;
+  color: #e6e6e6;
   font-family: "Poppins", sans-serif;
-  color: #222;
   margin: 0;
   padding: 0;
 }
 
+/* === Основний контейнер === */
 .profile-wrap {
   max-width: 1000px;
   margin: 40px auto;
   padding: 0 16px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
   gap: 20px;
 }
 
 /* === Картки === */
 .card {
-  background: #fff;
+  background: #111318;
+  border: 1px solid rgba(0, 255, 255, 0.08);
   border-radius: 14px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+  box-shadow: 0 0 10px rgba(0, 255, 255, 0.05);
   padding: 18px 20px;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 .card:hover {
   transform: translateY(-2px);
-  box-shadow: 0 4px 18px rgba(0,0,0,0.12);
+  box-shadow: 0 0 16px rgba(0, 255, 255, 0.2);
 }
 
 h1 {
   grid-column: 1 / -1;
   text-align: center;
-  color: #4a00e0;
-  background: linear-gradient(45deg, #4a00e0, #00fff2);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 28px;
-  margin-bottom: 6px;
+  color: #00fff2;
+  font-weight: 600;
+  font-size: 26px;
+  margin-bottom: 4px;
 }
 
 h3 {
-  color: #333;
+  color: #00fff2;
   margin-top: 0;
+  font-size: 18px;
 }
 
-/* Кнопки */
+/* === Кнопки === */
 .btn {
-  padding: 10px 14px;
+  padding: 9px 12px;
   border-radius: 10px;
   border: none;
   cursor: pointer;
@@ -79,28 +80,27 @@ h3 {
 }
 .btn-ghost {
   background: transparent;
-  border: 1px solid #ccc;
-  color: #333;
+  border: 1px solid rgba(0, 255, 255, 0.3);
+  color: #00fff2;
 }
 .btn:hover {
   transform: scale(1.03);
-  box-shadow: 0 0 10px rgba(0,255,255,0.2);
+  box-shadow: 0 0 10px rgba(0,255,255,0.25);
 }
 
-/* === Профіль користувача === */
+/* === Профіль === */
 #user-card {
   text-align: center;
 }
 #user-card h3 {
   font-size: 20px;
-  color: #222;
 }
 #user-card .muted {
-  font-size: 14px;
-  color: #666;
+  color: #9aa0a6;
+  font-size: 13px;
 }
 .profile-actions {
-  margin-top: 12px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -114,9 +114,9 @@ h3 {
   margin-top: 10px;
 }
 .bookmark-card {
-  background: #fafafa;
+  background: #0d0f14;
+  border: 1px solid rgba(0,255,255,0.15);
   border-radius: 10px;
-  border: 1px solid #ddd;
   overflow: hidden;
   cursor: pointer;
   transition: 0.2s;
@@ -127,20 +127,20 @@ h3 {
 }
 .bookmark-card img {
   width: 100%;
-  height: 200px;
+  height: 190px;
   object-fit: cover;
 }
 .bookmark-card p {
   margin: 8px;
   text-align: center;
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 13.5px;
+  color: #eaeaea;
 }
 
 /* === Повідомлення === */
 .message-item {
-  background: #fafafa;
-  border: 1px solid #ddd;
+  background: #0e1015;
+  border: 1px solid rgba(0,255,255,0.1);
   border-radius: 10px;
   padding: 10px 12px;
   margin-bottom: 8px;
@@ -152,34 +152,34 @@ h3 {
 }
 .message-body {
   margin-top: 6px;
-  color: #333;
+  color: #ddd;
   font-size: 14px;
 }
 .msg-delete {
   background: transparent;
   border: 1px solid rgba(255,77,77,0.4);
-  color: #c00;
+  color: #ff6b6b;
   border-radius: 6px;
-  padding: 4px 8px;
+  padding: 3px 8px;
   font-size: 12px;
   cursor: pointer;
 }
 .msg-delete:hover {
-  background: rgba(255,77,77,0.1);
+  background: rgba(255,77,77,0.15);
 }
 
-/* === Загальний вигляд === */
+/* === Футер === */
 footer {
   grid-column: 1 / -1;
   text-align: center;
-  color: #777;
-  margin: 24px 0;
+  color: #888;
+  margin: 28px 0;
   font-size: 14px;
 }
 </style>
 
 </head>
-<body style="background:#f6f6f8;">
+<body>
 
 <!-- Хедер -->
 <div id="header-placeholder"></div>
