--- a/profile.html
+++ b/profile.html
@@ -145,6 +145,10 @@ h3 {
   padding: 10px 12px;
   margin-bottom: 8px;
 }
+/* позиціонування для бейджа */
+#messages-card {
+  position: relative;
+}
 .message-header {
   display: flex;
   justify-content: space-between;
