--- a/collection.html
+++ b/collection.html
@@ -149,6 +149,6 @@ body {
   background: radial-gradient(circle at top, #0a0a0a, #000);
 }
 </style>
-
+<script src="auth.js"></script>
 </body>
 </html>
