--- a/index.html
+++ b/index.html
@@ -400,9 +400,10 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 
 
 
-
+<script src="auth.js"></script>
 </body>
 </html>
+
 
 
 
