--- a/multseries.html
+++ b/multseries.html
@@ -541,6 +541,6 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 
 </script>
-
+<script src="auth.js"></script>
 </body>
 </html>
