--- a/series.html
+++ b/series.html
@@ -525,6 +525,6 @@ document.addEventListener("DOMContentLoaded", async () => {
 })();
 </script>
 
-
+<script src="auth.js"></script>
 </body>
 </html>
