--- a/header.html
+++ b/header.html
@@ -60,7 +60,7 @@
 <a href="/category.html?type=Мультфільм">Мультфільми</a>
 <a href="/category.html?type=Мультсеріал">Мультсеріали</a>
 
-<a href="#">Новинки</a>
+<a href="/new.html">Новинки</a>
 <a href="/collections.html">Збірки фільмів</a>
 </nav>
 
