--- a/new.html
+++ b/new.html
@@ -6,6 +6,46 @@
   <title>🌟 Новинки — KinoSite</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+
+  <style>
+    /* Робимо картки компактнішими */
+    .film-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+      gap: 16px;
+    }
+    .film {
+      background: #0e0f13;
+      border-radius: 10px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .film:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 14px rgba(0,255,255,0.25);
+    }
+    .film img {
+      width: 100%;
+      height: 210px;
+      object-fit: cover;
+      border-bottom: 1px solid rgba(0,255,255,0.1);
+    }
+    .film .title {
+      padding: 6px 8px;
+      font-size: 13px;
+      font-weight: 500;
+      color: #fff;
+      text-align: center;
+      min-height: 40px;
+    }
+    .film .meta {
+      font-size: 12px;
+      color: #bbb;
+      text-align: center;
+      padding-bottom: 8px;
+    }
+  </style>
 </head>
 
 <body>
@@ -34,16 +74,17 @@
     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
     const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-    async function loadNewFilms() {
+    async function loadNewItems() {
       const box = document.getElementById("new-films");
       box.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
 
+      // Беремо всі потрібні типи
       const { data, error } = await supabase
         .from("films_site")
         .select("id, title, poster, year, genre, type, imdb, pro_access")
-        .eq("type", "Фільм")
+        .in("type", ["Фільм", "Серіал", "Мультфільм", "Мультсеріал"])
         .gte("year", 2024)
-        .order("year", { ascending: false });
+        .order("id", { ascending: false });
 
       if (error) {
         console.error("❌ Помилка:", error);
@@ -52,35 +93,46 @@
       }
 
       if (!data?.length) {
-        box.innerHTML = "<p style='color:#aaa;'>Поки що немає нових фільмів.</p>";
+        box.innerHTML = "<p style='color:#aaa;'>Поки що немає нових фільмів чи серіалів.</p>";
         return;
       }
 
+      // Групуємо унікальні за назвою, щоб не дублювати серії
       const unique = Array.from(new Map(data.map(f => [f.title, f])).values());
+
       box.innerHTML = "";
-      unique.forEach(f => {
+      unique.forEach(item => {
         const card = document.createElement("div");
         card.className = "film";
         card.innerHTML = `
           <div class="poster">
-            <img src="${f.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${f.title}">
-            ${String(f.pro_access || '').toUpperCase() === 'PRO' ? '<span class="badge plus">PRO</span>' : ''}
+            <img src="${item.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${item.title}">
+            ${String(item.pro_access || '').toUpperCase() === 'PRO' ? '<span class="badge plus">PRO</span>' : ''}
           </div>
-          <div class="title">${f.title}</div>
+          <div class="title">${item.title}</div>
           <div class="meta">
-            <span>${f.genre || ''}</span> • 
-            <span>${f.year || ''}</span> • 
-            <span>IMDb: ${f.imdb || '—'}</span>
+            <span>${item.type || ''}</span> • 
+            <span>${item.genre || ''}</span> • 
+            <span>${item.year || ''}</span>
           </div>
         `;
+
+        // 🔹 Логіка переходу
         card.addEventListener("click", () => {
-          window.location.href = "film.html?id=" + f.id;
+          if (item.type === "Серіал") {
+            window.location.href = "series.html?title=" + encodeURIComponent(item.title);
+          } else if (item.type === "Мультсеріал") {
+            window.location.href = "multseries.html?title=" + encodeURIComponent(item.title);
+          } else {
+            window.location.href = "film.html?id=" + item.id;
+          }
         });
+
         box.appendChild(card);
       });
     }
 
-    document.addEventListener("DOMContentLoaded", loadNewFilms);
+    document.addEventListener("DOMContentLoaded", loadNewItems);
   </script>
 
   <script src="auth.js"></script>
