--- a/new.html
+++ b/new.html
@@ -45,6 +45,44 @@
       text-align: center;
       padding-bottom: 8px;
     }
+    /* === 🌟 Стиль заголовка сторінки "Новинки" === */
+.page-title {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 25px;
+  position: relative;
+}
+
+.page-title .emoji {
+  display: block;
+  font-size: 26px;
+  margin-bottom: 6px;
+  animation: pulseStar 2.5s infinite ease-in-out;
+}
+
+.page-title h1 {
+  font-size: 32px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  background: linear-gradient(90deg, #00fff2, #7b2fff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 0 0 12px rgba(0,255,255,0.3);
+  margin: 0;
+}
+
+.page-title h1 span {
+  color: #fff;
+  background: linear-gradient(90deg, #8b00ff, #00fff2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@keyframes pulseStar {
+  0%,100% { transform: scale(1); opacity: 1; }
+  50% { transform: scale(1.3); opacity: 0.7; }
+}
+
   </style>
 </head>
 
@@ -60,7 +98,10 @@
 
   <!-- === MAIN === -->
   <main class="container" style="padding: 20px;">
-    <h1 style="color:#00fff2;text-align:center;">🌟 Новинки 2024–2025</h1>
+    <div class="page-title">
+      <span class="emoji">🌟</span>
+      <h1>Новинки&nbsp;<span>2024–2025</span></h1>
+    </div>
     <div id="new-films" class="film-grid" style="margin-top:20px;"></div>
   </main>
 
