--- a/header.html
+++ b/header.html
@@ -2,7 +2,9 @@
 <header>
   <div class="container topbar">
     <nav class="main-nav">
-      <img src="logo.png" alt="Relax Logo" class="nav-logo" />
+      <a href="/index.html">
+        <img src="logo.png" alt="Relax Logo" class="nav-logo" />
+      </a>
       <a href="/index.html" class="active">Головна</a>
 
 <!-- === МЕНЮ ФІЛЬМИ === -->
