--- a/category.html
+++ b/category.html
@@ -108,11 +108,33 @@
   <!-- Хедер -->
   <div id="header-placeholder"></div>
   <script>
-    fetch("header.html")
-      .then(res => res.text())
-      .then(html => { document.getElementById("header-placeholder").innerHTML = html; })
-      .catch(err => console.error("Помилка хедера:", err));
-  </script>
+  // 🟢 Функція, яка активує пошук після вставки хедера
+  function bindHeaderSearch() {
+    const input = document.getElementById("search-input");
+    if (!input) return;
+
+    input.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        e.preventDefault();
+        const query = input.value.trim();
+        if (query.length > 1) {
+          localStorage.setItem("searchQuery", query);
+          window.location.href = "/search.html";
+        }
+      }
+    });
+  }
+
+  // 🟢 Завантажуємо хедер і одразу активуємо пошук
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
+      bindHeaderSearch(); // Підключаємо пошук після вставки
+    })
+    .catch(err => console.error("Помилка завантаження хедера:", err));
+</script>
+
 
   <h1 id="pageTitle">Категорія</h1>
   <!-- === ПАНЕЛЬ ФІЛЬТРІВ === -->
